# viceptica

./: CREDITS  Cargo.toml  README.md  old_save.rs  test_save.lv
res/data/: brush_types.json
res/data/prefabs/: takuji.json  test_prefab.json
res/data/prefabs/effects/: heavy_fog_trigger.json  light_fog_trigger.json
res/dialog/: dialog_spec.dlg
res/levels/: default_level.json  demo.json  doors.json  long_lasting_environmental_effects_of_big_door.json  tamu_textures.json  test_level.lv  the_incident.lv
res/levels/test/: 2.json  3.json  bigbox.json  el.json  extents.json  fog.json  prefab.json  prefabs2.json
res/models/: machine.glb
res/shaders/: flat.frag.glsl  flat.vert.glsl  instanced.frag.glsl  instanced.vert.glsl  lines.frag.glsl  lines.vert.glsl  one.vert.glsl  screen.frag.glsl  screen.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  triangle.frag.glsl  ui.frag.glsl  ui.vert.glsl
res/textures/: tar_specular.aseprite
res/textures/cubemap/cloudy_sky/: the_green-evil.json
src/: collision.rs  common.rs  component.rs  dialog.rs  effects.rs  input.rs  main.rs  mesh.rs  prefab.rs  render.rs  save.rs  shader.rs  texture.rs  ui.rs  window.rs  world.rs
