[package]
name = "viceptica"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.16.0"
glutin = "0.31.2"
glutin-winit = "0.4.2"
winit = { version = "0.29.10", features = ["rwh_05"] }
raw-window-handle = "0.5"
cgmath = { version = "0.18.0", features = ["swizzle"] }
image = "0.25.6"
tobj = "4.0.3"
winapi = { version = "0.3.9", features = ["winuser"] }
parry3d = "0.21.1"
itertools = "0.14.0"
rkyv = "0.8.11"
rfd = "0.15.4"
